[package]
name = "dumpsys-rs"
version = "0.1.1"
edition = "2021"
authors = ["shadow3"]
readme = "README.md"
repository = "https://github.com/shadow3aaa/dumpsys-rs"
description = "`dumpsys-rs` is a Rust library for retrieving and dumping service information in an Android system. It provides a convenient way to fetch detailed status information from different system services, similar to the `dumpsys` command in the Android shell."
license = "GPL-3.0"

[dependencies]
binder = { git = "https://github.com/shadow3aaa/binder_rs", package = "binder_ndk" }
os_pipe = "1.2.1"
thiserror = "2.0.11"
